# taskmanager-tools

./: .gitignore  .secrets.baseline  LICENSE  README.md  generate_pdf.py  main.py  mypy.ini  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
src/papers/: arxiv_fetcher.py  research_paper_util.py  upload.py
src/pdf/: generate_pdf.py
src/remarkable/: rmapi.py
src/taskmanager_tools.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
taskmanager_tools.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
